--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Booking Application</title>
-    <!-- Initialize Bootstrap  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -121,7 +120,7 @@
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
+              <h5 class="card-title">Joker</h5>
               <p class="card-text">Drama</p>
             </div>
           </div>
